--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "WebRtcAndroid"]
-		path = WebRtcAndroid
-		url = ssh://192.168.100.221:29418/WebRtcAndroid
+	path = WebRtcAndroid
+	url = ssh://hongdongsheng@yf.cylan.com.cn:29418/WebRtcAndroid
