--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "WebRtcAndroid"]
 	path = WebRtcAndroid
-	url = ssh://hongdongsheng@yf.cylan.com.cn:29418/WebRtcAndroid
+	url = ssh://jenkins@gerrit.lan:29418/WebRtcAndroid
