--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
-include ':app', ':jlib', ':bugly', ':mta'
+include ':app', ':jlib', ':bugly', ':mta', ':blockcanary'
 include ':WebRtcAndroid'
 project(':WebRtcAndroid').projectDir = new File(settingsDir, './WebRtcAndroid/app')
