--- a/bugly/build.gradle
+++ b/bugly/build.gradle
@@ -27,8 +27,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     ///////////////////bugly////////////////////////////
-    compile 'com.tencent.bugly:crashreport:2.1'
+    //    compile 'com.tencent.bugly:crashreport:2.1'
+    compile files('src/main/jniLibs/bugly_crash_release__2.1.jar')
 }
