--- a/permissions/build.gradle
+++ b/permissions/build.gradle
@@ -16,10 +16,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    lintOptions {
+        abortOnError false
+    }
+
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile rootProject.ext.junit
     compile rootProject.ext.appcompat
+    compile project(':jlib')
 }
