--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
-include ':app', ':jlib', ':bugly', ':mta', ':blockcanary', ':uil', ':dswlog', ':scanbinding'
+include ':app', ':jlib', ':bugly', ':mta', ':blockcanary', ':uil', ':dswlog', ':scanbinding', ':permissions'
 include ':WebRtcAndroid'
 project(':WebRtcAndroid').projectDir = new File(settingsDir, './WebRtcAndroid/app')
