--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ ext {
     compileSdkVersion = 23
     targetSdkVersion = 23
     buildToolsVersion = '23.0.2'
-
+    robolectric = 'org.robolectric:robolectric:3.0'
 
     junit = 'junit:junit:4.12'
     appcompat = 'com.android.support:appcompat-v7:23.1.1'
