--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ ext {
     targetSdkVersion = 23
     buildToolsVersion = '23.0.2'
     robolectric = 'org.robolectric:robolectric:3.0'
+    ultra_ptr = 'in.srain.cube:ultra-ptr:1.0.11'
 
     junit = 'junit:junit:4.12'
     appcompat = 'com.android.support:appcompat-v7:23.1.1'
