--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,7 +62,7 @@
         android:required="false" />
 
     <application
-        android:name=".base.MyApp"
+        android:name=".n.base.BaseApplication"
         android:configChanges="locale|orientation|keyboardHidden"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -70,15 +70,12 @@
         <meta-data
             android:name="TA_APPKEY"
             android:value="MATAPPKEY" />
-
-        　　
-
         <meta-data
             android:name="InstallChannel"
             android:value="play" />
 
         <activity
-            android:name=".activity.SplashActivity"
+            android:name=".n.NewHomeActivity"
             android:configChanges="locale|orientation|keyboardHidden"
             android:screenOrientation="portrait"
             android:theme="@style/activity.welcome.theme"
@@ -465,7 +462,11 @@
             android:configChanges="locale|orientation|keyboardHidden"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar" />
-        <activity android:name=".view.activity.ShowBigPicActivity"></activity>
+        <activity android:name=".view.activity.ShowBigPicActivity" />
+
+        <service
+            android:name=".n.base.FirstTaskInitService"
+            android:exported="false"></service>
     </application>
 
 </manifest>
