--- a/build.gradle
+++ b/build.gradle
@@ -32,5 +32,10 @@ ext {
 
     junit = 'junit:junit:4.12'
     appcompat = 'com.android.support:appcompat-v7:23.1.1'
+    appSupport = 'com.android.support:support-v4:23.3.0'
     rxjava = 'io.reactivex:rxjava:1.1.1'
+    rxAndroid = 'io.reactivex:rxandroid:1.0.1'
+    butterknife = 'com.jakewharton:butterknife:8.0.1'
+
+    apt = 'com.jakewharton:butterknife-compiler:8.0.1'
 }
