--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compile rootProject.ext.appcompat
     compile rootProject.ext.butterknife
     compile rootProject.ext.rxAndroid
+    compile rootProject.ext.ultra_ptr
     apt rootProject.ext.apt
     compile rootProject.ext.appSupport
     compile project(':jlib')
