--- a/build.gradle
+++ b/build.gradle
@@ -38,4 +38,8 @@ ext {
     butterknife = 'com.jakewharton:butterknife:8.0.1'
 
     apt = 'com.jakewharton:butterknife-compiler:8.0.1'
+
+    glide = 'com.github.bumptech.glide:glide:3.7.0'
+    glideSupport= 'com.android.support:support-v4:19.1.0'
+
 }
