--- a/jlib/build.gradle
+++ b/jlib/build.gradle
@@ -23,7 +23,7 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile rootProject.ext.junit
+//    testCompile rootProject.ext.junit
     compile rootProject.ext.rxjava
     compile rootProject.ext.ultra_ptr
     compile rootProject.ext.appSupport
@@ -37,4 +37,5 @@ dependencies {
     compile files('src/main/jniLibs/bugly_crash_release__2.1.jar')
     compile files('src/main/jniLibs/mta-android-stat-sdk-2.2.0.jar')
     compile files('src/main/jniLibs/mid-sdk-2.3.jar')
+    compile files('src/main/jniLibs/open_sdk_r5509_lite.jar')
 }
