--- a/jlib/build.gradle
+++ b/jlib/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     compile rootProject.ext.rxjava
     compile rootProject.ext.ultra_ptr
     compile rootProject.ext.appSupport
+    compile rootProject.ext.recyclerView
     compile files('src/main/jniLibs/gson-2.2.4.jar')
     compile files('src/main/jniLibs/msgpack-0.6.12-SNAPSHOT.jar')
     compile files('src/main/jniLibs/nineoldandroids-2.4.0.jar')
