--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     compile files('src/main/jniLibs/mta-android-stat-sdk-2.2.0.jar')
     compile files('src/main/jniLibs/open_sdk_r5509_lite.jar')
     compile files('src/main/jniLibs/weibosdkcore.jar')
+    compile files('src/main/jniLibs/mid-sdk-2.3.jar')
 }
 
 
