--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     compile files('src/main/jniLibs/open_sdk_r5509_lite.jar')
     compile files('src/main/jniLibs/weibosdkcore.jar')
     compile files('src/main/jniLibs/mid-sdk-2.3.jar')
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha1'
 }
 
 
