调整项目结构，工具类尽量不依赖打印工具类。

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 *.iml
 .gradle
+.idea/
 /local.properties
 /.idea/workspace.xml
 /.idea/libraries
@@ -9,5 +10,6 @@
 /gen
 /mapping.txt
 /bin
-
+/gradle
 /node_modules
+app/libs/armeabi-v7a/libjfgsdk.so
