--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.5.0'
+        classpath 'com.android.tools.build:gradle:2.2.0-alpha1'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -37,7 +37,6 @@ ext {
     rxjava = 'io.reactivex:rxjava:1.1.3'
     rxAndroid = 'io.reactivex:rxandroid:1.0.1'
     butterknife = 'com.jakewharton:butterknife:8.0.1'
-
     apt = 'com.jakewharton:butterknife-compiler:8.0.1'
 
     glide = 'com.github.bumptech.glide:glide:3.7.0'
