新增文件,targetSdk 23权限修改,引导页修改

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     apt rootProject.ext.apt
     compile rootProject.ext.glide
     compile rootProject.ext.glideSupport
+    compile rootProject.ext.permis
+    apt rootProject.ext.permisApt
     compile project(':jlib')
     compile project(':WebRtcAndroid')
 }
