--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
 
     <uses-feature android:name="android.hardware.wifi" />
 
+    <uses-permission android:name="android.permission.WRITE_CONTACTS"/>
     <uses-permission android:name="android.permission.GET_TASKS" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
@@ -66,6 +67,7 @@
         android:configChanges="locale|orientation|keyboardHidden"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:theme="@style/Theme.AppCompat"
         android:largeHeap="true">
         <meta-data
             android:name="TA_APPKEY"
@@ -75,10 +77,10 @@
             android:value="play" />
 
         <activity
-            android:name=".n.NewHomeActivity"
+            android:name=".n.view.splash.WelcomePage"
             android:configChanges="locale|orientation|keyboardHidden"
             android:screenOrientation="portrait"
-            android:theme="@style/activity.welcome.theme"
+
             android:windowSoftInputMode="adjustPan|stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -86,6 +88,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".n.NewHomeActivity"></activity>
+
         <receiver android:name=".n.engine.DaemonService$BootCompletedReceiver">
             <intent-filter android:priority="0x7fffffff">
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
