--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,12 +22,15 @@ android {
             }
         }
     }
+    signingConfigs {
+        release
+    }
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-//            signingConfig signingConfigs.release
+            signingConfig signingConfigs.release
         }
     }
     lintOptions {
