--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,9 +28,13 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            shrinkResources true
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
+        }
+        debug{
+            minifyEnabled false
         }
     }
     lintOptions {
