--- a/build.gradle
+++ b/build.gradle
@@ -40,8 +40,15 @@ ext {
     butterknife = 'com.jakewharton:butterknife:8.0.1'
     apt = 'com.jakewharton:butterknife-compiler:8.0.1'
     glide = 'com.github.bumptech.glide:glide:3.7.0'
-    glideSupport= 'com.android.support:support-v4:19.1.0'
+    glideSupport = 'com.android.support:support-v4:19.1.0'
 
     permis = 'com.github.hotchemi:permissionsdispatcher:2.1.3'
     permisApt = 'com.github.hotchemi:permissionsdispatcher-processor:2.1.3'
+
+
+
+    systembartint = 'com.readystatesoftware.systembartint:systembartint:1.0.3'
+
+    buglySdk = 'com.tencent.bugly:crashreport:2.1.5'
+    buglyNdk = 'com.tencent.bugly:nativecrashreport:2.2.0'
 }
