--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,5 @@
 # org.gradle.parallel=true
 android.useDeprecatedNdk=true
 set org.gradle.jvmargs=-Xmx1536M
+org.gradle.daemon=true
+org.gradle.parallel=true
