--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -81,7 +81,6 @@
             android:name=".n.view.splash.WelcomePageActivity"
             android:configChanges="locale|orientation|keyboardHidden"
             android:screenOrientation="portrait"
-
             android:windowSoftInputMode="adjustPan|stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -89,11 +88,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!--<activity android:name=".n.view.splash.WelcomePage" />-->
         <activity
             android:name=".n.NewHomeActivity"
             android:launchMode="singleTask"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+
         <receiver android:name=".n.engine.DaemonService$BootCompletedReceiver">
             <intent-filter android:priority="0x7fffffff">
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
@@ -101,6 +100,7 @@
                 <action android:name="android.intent.action.USER_PRESENT" />
             </intent-filter>
         </receiver>
+        <activity android:name=".n.view.login.LoginModelActivity" />
 
         <service
             android:name=".n.base.FirstTaskInitService"
