--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -77,8 +77,9 @@
             android:name="InstallChannel"
             android:value="play" />
 
+        <activity android:name=".n.view.login.LoginModelActivity" />
         <activity
-            android:name=".n.view.login.LoginModelActivity"
+            android:name=".n.view.splash.WelcomePageActivity"
             android:configChanges="locale|orientation|keyboardHidden"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan|stateHidden">
@@ -106,6 +107,7 @@
             android:name=".n.NewHomeActivity"
             android:launchMode="singleTask"
             android:theme="@style/AppTheme" />
+
 
         <activity
             android:name="com.tencent.connect.common.AssistActivity"
