--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
 
     }
     signingConfigs {
-        release
+        release {}
     }
 
     buildTypes {
@@ -84,6 +84,7 @@ dependencies {
     compile rootProject.ext.buglyNdk
     compile files('libs/JfgAndroidSDK-2.0.94-sources.jar')
     compile files('libs/JfgAndroidSDK-2.0.94.jar')
+    compile 'com.android.support:support-v4:23.4.0'
 }
 
 if (project.hasProperty('keystoreFile') &&
