--- a/gradle.properties
+++ b/gradle.properties
@@ -13,6 +13,7 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 android.useDeprecatedNdk=true
-set org.gradle.jvmargs=-Xmx2048M
+#set org.gradle.jvmargs=-Xmx2048M
+org.gradle.jvmargs=-Xmx5120M
 org.gradle.daemon=true
 org.gradle.parallel=true
