--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -88,7 +88,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name="com.tencent.tauth.AuthActivity"
             android:launchMode="singleTask"
@@ -103,13 +102,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:configChanges="locale|orientation|keyboardHidden"
-            android:screenOrientation="portrait"
             android:name=".n.NewHomeActivity"
+            android:configChanges="locale|orientation|keyboardHidden"
             android:launchMode="singleTask"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
-
-
         <activity
             android:name="com.tencent.connect.common.AssistActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
@@ -136,6 +133,12 @@
             android:exported="true" />
         <service android:name=".n.engine.DaemonService$InnerAssistService" />
 
+        <activity
+            android:name=".n.view.activity.BindDeviceActivity"
+            android:configChanges="locale|orientation|keyboardHidden"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan|stateHidden" />
     </application>
 
 </manifest>
