--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -78,7 +78,7 @@
             android:value="play" />
 
         <activity
-            android:name=".n.view.splash.WelcomePageActivity"
+            android:name=".SmartcallActivity"
             android:configChanges="locale|orientation|keyboardHidden"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan|stateHidden">
@@ -102,7 +102,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".n.NewHomeActivity"
+            android:name=".NewHomeActivity"
             android:configChanges="locale|orientation|keyboardHidden"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
@@ -160,6 +160,20 @@
             android:screenOrientation="portrait"
             android:theme="@style/CamActivityTheme"
             android:windowSoftInputMode="adjustPan|stateHidden" />
+        <activity
+            android:name=".n.view.bell.DoorBellActivity"
+            android:configChanges="locale|orientation|keyboardHidden"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"
+            android:theme="@style/CamActivityTheme"
+            android:windowSoftInputMode="adjustPan|stateHidden" />
+        <!--<activity-->
+            <!--android:name=".n.view.bell.BellSettingActivity"-->
+            <!--android:configChanges="locale|orientation|keyboardHidden"-->
+            <!--android:launchMode="singleTask"-->
+            <!--android:screenOrientation="portrait"-->
+            <!--android:theme="@style/CamActivityTheme"-->
+            <!--android:windowSoftInputMode="adjustPan|stateHidden" />-->
     </application>
 
 </manifest>
