--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ ext {
     robolectric = 'org.robolectric:robolectric:3.0'
     appcompat = 'com.android.support:appcompat-v7:23.1.1'
     appSupport = 'com.android.support:support-v4:23.1.0'
+    appDesige ='com.android.support:design:23.3.0'
     appSupport = 'com.android.support:cardview-v7:23.1.0'
     recyclerView = 'com.android.support:recyclerview-v7:23.0.1'
     rxjava = 'io.reactivex:rxjava:1.1.3'
