在新的进程中启动呼叫页面

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,6 +90,8 @@ dependencies {
     //add by hunt 2016-08-01
     compile rootProject.ext.switchButton
     compile rootProject.ext.appDesige
+    //多进程文件共享方案
+    compile rootProject.ext.multiProcessSp
 }
 
 if (project.hasProperty('keystoreFile') &&
