--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ ext {
     robolectric = 'org.robolectric:robolectric:3.0'
     appcompat = 'com.android.support:appcompat-v7:23.1.1'
     appSupport = 'com.android.support:support-v4:23.1.0'
-    appDesige ='com.android.support:design:23.3.0'
+    appDesige = 'com.android.support:design:23.3.0'
     appSupport = 'com.android.support:cardview-v7:23.1.0'
     recyclerView = 'com.android.support:recyclerview-v7:23.0.1'
     rxjava = 'io.reactivex:rxjava:1.1.3'
@@ -50,4 +50,6 @@ ext {
     switchButton = 'com.kyleduo.switchbutton:library:1.4.1'
     leakcanaryAndroid = 'com.squareup.leakcanary:leakcanary-android:1.4-beta2'
     leakcanaryAndroidNoOp = 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
+    //多进程文件共享方案
+    multiProcessSp = 'net.grandcentrix.tray:tray:0.10.0'
 }
