门铃直播，横屏竖屏切换

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -176,7 +176,7 @@
         <!-- android:windowSoftInputMode="adjustPan|stateHidden" /> -->
         <activity
             android:name=".n.view.bell.BellLiveActivity"
-            android:configChanges="locale|orientation|keyboardHidden"
+            android:configChanges="locale|orientation|keyboardHidden|navigation|screenSize"
             android:launchMode="singleTask"
             android:process=":bell_call"
             android:screenOrientation="portrait"
