--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,7 +68,6 @@
         android:configChanges="locale|orientation|keyboardHidden"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:largeHeap="true"
         android:theme="@style/AppTheme">
         <meta-data
             android:name="TA_APPKEY"
@@ -103,11 +102,10 @@
         </activity>
         <activity
             android:name=".NewHomeActivity"
-            android:configChanges="locale|orientation|keyboardHidden"
             android:launchMode="singleTask"
-            android:windowSoftInputMode="adjustResize"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
+
         <activity
             android:name="com.tencent.connect.common.AssistActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
@@ -189,6 +187,12 @@
             android:name=".n.engine.SimpleHelperIntentService"
             android:exported="false"
             android:process=":bell_call" />
+
+        <!--容纳意见反馈的Activity-->
+        <activity android:name=".n.view.mine.SuggestionChatContainerActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            >
+        </activity>
     </application>
 
 </manifest>
