--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -105,9 +105,9 @@
             android:name=".NewHomeActivity"
             android:configChanges="locale|orientation|keyboardHidden"
             android:launchMode="singleTask"
-            android:windowSoftInputMode="adjustResize"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme" />
+            android:theme="@style/CamActivityTheme"
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name="com.tencent.connect.common.AssistActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
@@ -184,11 +184,20 @@
             android:theme="@style/CamActivityTheme"
             android:windowSoftInputMode="adjustPan|stateHidden" />
 
-        <!--一个空的service，辅助启动bell_call进程。-->
+        <!-- 一个空的service，辅助启动bell_call进程。 -->
         <service
             android:name=".n.engine.SimpleHelperIntentService"
             android:exported="false"
             android:process=":bell_call" />
+
+        <activity
+            android:name=".n.view.activity.MediaActivity"
+            android:configChanges="locale|orientation|keyboardHidden|navigation|screenSize"
+            android:launchMode="singleTask"
+            android:process=":bell_call"
+            android:screenOrientation="portrait"
+            android:theme="@style/MediaActivityTransition"
+            android:windowSoftInputMode="adjustPan|stateHidden" />
     </application>
 
 </manifest>
